@@ -27,6 +27,7 @@ Revision history for Perl module Math::Prime::Util
     - is_almost_prime(n,k)            does n have exactly k prime factors
     - almost_prime_count(n,k)         Counts integers with exactly k factors
     - almost_prime_count_approx(n,k)  Approximate count for k-almost-primes
+    - nth_almost_prime(n,k)           The nth number with exactly k factors
 
     [FIXES]
 
